Force module cache test case to use cabal cradle

--- a/.gitignore
+++ b/.gitignore
@@ -75,5 +75,6 @@ _build/
 stack*.yaml.lock
 shake.yaml.lock
 
-# ignore hie.yaml's for testdata 
+# ignore hie.yaml's for testdata
 test/**/*.yaml
+!test/testdata/multi-component/hie.yaml
